Version 0.3   Aug 15, 2022
Ulf Zibis <Ulf.Zibis@CoSoCo.de>

* Renamed folder "Device" to "Internal" as known from Windows app.

Version 0.2.2   Aug 14, 2022
Ulf Zibis <Ulf.Zibis@CoSoCo.de>

* Cleared source code.
* Merged duplicate code.
* Freed forgotten heap memory.
* Replaced heap memory use by arrays where possible.
* Fixed bug, if PC directory could not be created.
* Check enummeration errors.
* Fixed bugs in volumeEnumerateIncludeHidden():
  If MAX_VOLUMES were reached, last volRef was overwritten by hidden volume ref.
  Set volRefs in correct order.
* Fixed null pointer bug, if database could not be opened.
* Fetch and backup files immediately after album found.
* Got rid of using gdbm data base.
* Fixed bug: File date & time on backuped media was wrong.
* Fixed bug if file extensions are uppercase.
* Again fixed bad casts on iterators.
* Simplified file copy code.
* Reuse dirRef.
* Fixed problem, if there would be a real folder "Unfiled" on SDCard,
  so removed automatic creation of "Unfiled" on PC.
* Added additional root "/Fotos & Videos", see:
  <https://sourceforge.net/p/picsnvideos/discussion/822268/thread/3642430c/>

Version 0.2.1   Jul 22, 2022
Ulf Zibis <Ulf.Zibis@CoSoCo.de>

* Updated config files.
* Fixed endless loops by inserting correct casts on iterators.

Version 0.2   May 17, 2008
Dan Bodoh

* Added support for the Treo 650.  Thanks to Raymond Ingles for info
  about the Treo 650 directory structure and testing.
* Now fetches .3g2 videos
* Now fetches audio captions
* Create-date of fetched file is set to create-date of original file
* Cleaned up logging; moved most messages to debug logging

Version 0.1   May 12, 2008
Dan Bodoh

* Changed destination of pictures and videos to $HOME/PalmPictures
* Now uses standard ./configure; make; make install (or 'make local_install'
  for installation to $HOME/.jpilot/plugins)
* Plugin is now named 'libpicsnvideos.so'.  If you used version 0.0,