@@ -1,7 +1,8 @@
 Version 0.3   Aug 15, 2022
 Ulf Zibis <Ulf.Zibis@CoSoCo.de>
 
-* Renamed folder "Device" to "Internal" as known from Windows app.
+* Renamed folder "Device" to "Internal" as known from Windows desktop app.
+* Instead $HOME/PalmPictures use $PALM_HOME/.jpilot/Media.
 
 Version 0.2.2   Aug 14, 2022
 Ulf Zibis <Ulf.Zibis@CoSoCo.de>
